file path corrected

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
     <!-- Bootstrap CSS CDN ok-->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <!-- Your custom stylesheet (optional) -->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
 
     <!-- Background Video -->
-     <video autoplay muted loop id="background-video" class="w-100">
-        <source src="/asset/video/bg2.mp4" type="video/mp4">
-    </video>
+     <!-- <video autoplay muted loop id="background-video" class="w-100">
+        <source src="asset/video/bg2.mp4" type="video/mp4">
+    </video> -->
 
-    <img src="/asset/images/bg-1.png" alt="Background Image" id="background-image" class="img-fluid">
+    <img src="asset/images/bg-1.png" alt="Background Image" id="background-image" class="img-fluid">
 
     
 
@@ -66,7 +66,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-    <script src="/script/script.js"></script>
+    <script src="script/script.js"></script>
     <script src="https://sdk.scdn.co/spotify-player.js"></script>
 
 
